// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodResolver > should return a single error from zodResolver when validation fails 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "auth": {
      "type": {
        "message": "Invalid input",
        "ref": undefined,
        "type": "invalid_union",
      },
    },
    "birthYear": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "dateStr": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "email": {
      "message": "Invalid input",
      "ref": {
        "name": "email",
      },
      "type": "invalid_format",
    },
    "enabled": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "like": [
      {
        "id": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
        },
        "name": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
        },
      },
    ],
    "password": {
      "message": "One uppercase character",
      "ref": {
        "name": "password",
      },
      "type": "invalid_format",
    },
    "repeatPassword": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "tags": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "url": {
      "message": "Custom error url",
      "ref": undefined,
      "type": "invalid_format",
    },
    "username": {
      "message": "Invalid input",
      "ref": {
        "name": "username",
      },
      "type": "invalid_type",
    },
  },
  "values": {},
}
`;

exports[`zodResolver > should return a single error from zodResolver with \`mode: sync\` when validation fails 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "auth": {
      "type": {
        "message": "Invalid input",
        "ref": undefined,
        "type": "invalid_union",
      },
    },
    "birthYear": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "dateStr": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "email": {
      "message": "Invalid input",
      "ref": {
        "name": "email",
      },
      "type": "invalid_format",
    },
    "enabled": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "like": [
      {
        "id": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
        },
        "name": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
        },
      },
    ],
    "password": {
      "message": "One uppercase character",
      "ref": {
        "name": "password",
      },
      "type": "invalid_format",
    },
    "repeatPassword": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "tags": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
    },
    "url": {
      "message": "Custom error url",
      "ref": undefined,
      "type": "invalid_format",
    },
    "username": {
      "message": "Invalid input",
      "ref": {
        "name": "username",
      },
      "type": "invalid_type",
    },
  },
  "values": {},
}
`;

exports[`zodResolver > should return all the errors from zodResolver when validation fails with \`validateAllFieldCriteria\` set to true 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": [
          "Invalid input",
          "Invalid input",
        ],
        "invalid_union": "Invalid input",
      },
    },
    "auth": {
      "type": {
        "message": "Invalid input",
        "ref": undefined,
        "type": "invalid_union",
        "types": {
          "invalid_union": "Invalid input",
        },
      },
    },
    "birthYear": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "dateStr": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "email": {
      "message": "Invalid input",
      "ref": {
        "name": "email",
      },
      "type": "invalid_format",
      "types": {
        "invalid_format": "Invalid input",
      },
    },
    "enabled": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "like": [
      {
        "id": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
          "types": {
            "invalid_type": "Invalid input",
          },
        },
        "name": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
          "types": {
            "invalid_type": "Invalid input",
          },
        },
      },
    ],
    "password": {
      "message": "One uppercase character",
      "ref": {
        "name": "password",
      },
      "type": "invalid_format",
      "types": {
        "invalid_format": [
          "One uppercase character",
          "One lowercase character",
          "One number",
        ],
        "too_small": "Must be at least 8 characters in length",
      },
    },
    "repeatPassword": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "tags": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "url": {
      "message": "Custom error url",
      "ref": undefined,
      "type": "invalid_format",
      "types": {
        "invalid_format": "Custom error url",
        "invalid_union": "Invalid input",
        "invalid_value": "Invalid input",
      },
    },
    "username": {
      "message": "Invalid input",
      "ref": {
        "name": "username",
      },
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
  },
  "values": {},
}
`;

exports[`zodResolver > should return all the errors from zodResolver when validation fails with \`validateAllFieldCriteria\` set to true and \`mode: sync\` 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": [
          "Invalid input",
          "Invalid input",
        ],
        "invalid_union": "Invalid input",
      },
    },
    "auth": {
      "type": {
        "message": "Invalid input",
        "ref": undefined,
        "type": "invalid_union",
        "types": {
          "invalid_union": "Invalid input",
        },
      },
    },
    "birthYear": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "dateStr": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "email": {
      "message": "Invalid input",
      "ref": {
        "name": "email",
      },
      "type": "invalid_format",
      "types": {
        "invalid_format": "Invalid input",
      },
    },
    "enabled": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "like": [
      {
        "id": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
          "types": {
            "invalid_type": "Invalid input",
          },
        },
        "name": {
          "message": "Invalid input",
          "ref": undefined,
          "type": "invalid_type",
          "types": {
            "invalid_type": "Invalid input",
          },
        },
      },
    ],
    "password": {
      "message": "One uppercase character",
      "ref": {
        "name": "password",
      },
      "type": "invalid_format",
      "types": {
        "invalid_format": [
          "One uppercase character",
          "One lowercase character",
          "One number",
        ],
        "too_small": "Must be at least 8 characters in length",
      },
    },
    "repeatPassword": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "tags": {
      "message": "Invalid input",
      "ref": undefined,
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
    "url": {
      "message": "Custom error url",
      "ref": undefined,
      "type": "invalid_format",
      "types": {
        "invalid_format": "Custom error url",
        "invalid_union": "Invalid input",
        "invalid_value": "Invalid input",
      },
    },
    "username": {
      "message": "Invalid input",
      "ref": {
        "name": "username",
      },
      "type": "invalid_type",
      "types": {
        "invalid_type": "Invalid input",
      },
    },
  },
  "values": {},
}
`;

exports[`zodResolver > should return parsed values from zodResolver with \`mode: sync\` when validation pass 1`] = `
{
  "errors": {},
  "values": {
    "accessToken": "accessToken",
    "auth": {
      "passwordHash": "hash",
      "type": "registered",
    },
    "birthYear": 2000,
    "dateStr": 2020-01-01T00:00:00.000Z,
    "email": "john@doe.com",
    "enabled": true,
    "like": [
      {
        "id": 1,
        "name": "name",
      },
    ],
    "password": "Password123_",
    "repeatPassword": "Password123_",
    "tags": [
      "tag1",
      "tag2",
    ],
    "url": "https://react-hook-form.com/",
    "username": "Doe",
  },
}
`;
